# injectfmt

./: Cargo.toml
.github/workflows/: rust_check.yml  update_cache.yml  update_rust_dependencies.yml
src/: cli.rs  config.rs  fmt.rs  main.rs
